--- a/journeyPorts_group_display.ipynb
+++ b/journeyPorts_group_display.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -34,13 +34,13 @@
     "# Project WP1-2\n",
     "### code 2: Display, and group ports\n",
     "<span style='font-family:\"Times New Roman\"'> <span styel=''> \n",
-    "This code is used to group terminals by given radius (e.g., 100 nm), and to add extra features \"Port\" and \"Region\".\n",
-    "The working datset in this sheet is \"PortList.csv\";\n",
+    "This code is used to group terminals by given radius (e.g., 100 nm), and to add extra features \"Main_port\" and \"Region\".\n",
+    "The working dataset in this sheet is \"PortList.csv\";\n",
     "### Basic steps: \n",
     "    a) Load data;\n",
     "    b) Calculate distance, and group terminal, individually;\n",
-    "    c) Assign a common name for each terminal group;\n",
-    "    d) Update \"portInfor.csv\" file with grouped ports, and further remove duplicates;\n",
+    "    c) Assign common names for terminal groups;\n",
+    "    d) Update \"portInfor.csv\" \"Main_port\", remove duplicates again;\n",
     "    e) Save dataset;"
    ]
   },
@@ -48,12 +48,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Step a) : Load data, sort data, and display ports info in geographic map"
+    "###  Step a) : Load, sort data, and display ports info in geographic map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "4                3371.0              3375.0              6746.0  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 255,
    "metadata": {
     "scrolled": true
    },
@@ -283,12 +283,32 @@
     "        counts_all.append(counts)\n",
     "        print (counts)\n",
     "        print ('\\n')\n",
-    "    return counts_all"
+    "    return counts_all\n",
+    "\n",
+    "\n",
+    "def plotPorts(df,directory=\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/\",file_name=\"portsOriginal_1.png\"):\n",
+    "    \"\"\"\n",
+    "    Plot ports on geomap\n",
+    "    df: dataframe with location coordinates\n",
+    "    \"\"\"\n",
+    "    bbox=(df.Lat.min(),df.Lat.max(),df.Lon.min(),df.Lon.max())                                                        \n",
+    "    print (\"The respective minimum and maximum latitude and longitude coordiates of ports are:\",bbox)\n",
+    "\n",
+    "    fig,ax=plt.subplots(figsize=(22,14))\n",
+    "    m = Basemap(projection='cyl', resolution='l',\n",
+    "                llcrnrlat=bbox[0], urcrnrlat=bbox[1],\n",
+    "                llcrnrlon=bbox[2], urcrnrlon=bbox[3])\n",
+    "    ax.scatter(df.Lon,df.Lat,zorder=1, alpha= 1, c='r', s=20)\n",
+    "    draw_map(m)\n",
+    "\n",
+    "    ax.set_xlim(bbox[2],bbox[3]);\n",
+    "    ax.set_ylim(bbox[0],bbox[1]);\n",
+    "    fig.savefig(directory+file_name,dpi=400)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -334,20 +354,8 @@
     "print (\"No duplicate terminals any more !\")\n",
     "print (\"----------------------------------------------------------------------------------------------------------------------\")\n",
     "\n",
-    "# visulize original ports \n",
-    "bbox=(df_ports.Lat.min(),df_ports.Lat.max(),df_ports.Lon.min(),df_ports.Lon.max())                                                        \n",
-    "print (\"The respective minimum and maximum latitude and longitude coordiates of ports are:\",bbox)\n",
-    "\n",
-    "fig,ax=plt.subplots(figsize=(22,14))\n",
-    "m = Basemap(projection='cyl', resolution='l',\n",
-    "            llcrnrlat=bbox[0], urcrnrlat=bbox[1],\n",
-    "            llcrnrlon=bbox[2], urcrnrlon=bbox[3])\n",
-    "ax.scatter(df_ports.Lon,df_ports.Lat,zorder=1, alpha= 1, c='r', s=20)\n",
-    "draw_map(m)\n",
-    "\n",
-    "ax.set_xlim(bbox[2],bbox[3]);\n",
-    "ax.set_ylim(bbox[0],bbox[1]);\n",
-    "fig.savefig(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/portsOriginal_1.png\",dpi=400)"
+    "# plot ports on map\n",
+    "plotPorts(df_ports,directory=\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/\",file_name=\"portsOriginal_1.png\")"
    ]
   },
   {
@@ -359,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +427,7 @@
     "\n",
     "def similar_terminals(df):\n",
     "    \"\"\"\n",
-    "    compute all similar terminals, given a dataframe\n",
+    "    compute all similar terminals in a given dataframe\n",
     "    Add them into a dictionary for further utilization.\n",
     "    \n",
     "    return: lists including all similar terminals for every terminal in given dataframe, and lists of terminals without similars\n",
@@ -456,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -515,12 +523,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step c): Group terminals and assign a common name for each group"
+    "### Step c): Group terminals and assign a common name for each group\n",
+    "Every terminal in the dataset has its own grouped similar terminals, as computed above. There are many overlapping according. \n",
+    "Based on sorted sequence, we will remove the less important (by number of calls) terminals, replaced by a common name in each group."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,10 +542,9 @@
     "    \n",
     "    similars_all: list,sorted, containing all terminals with their similarity\n",
     "    similars_all_ids: list, sorted, containing all terminals' id with their similarity. It has a strict match with similars_all\n",
-    "    return: main port dict, minor port dict\n",
+    "    return: main port dict, minor port dict, main port ids, minor port ids.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # copy dict, in order to pop() on the copy dict\n",
+    "    # copy dict, prepare for pop().\n",
     "    similar_dict=listToDict(similars_all)\n",
     "    similar_dictC=similar_dict.copy()\n",
     "    similar_dict_ids=listToDict(similars_all_ids)\n",
@@ -585,7 +594,6 @@
     "    list1,list2: list\n",
     "    return: union list, or list1\n",
     "    \"\"\"\n",
-    "    \n",
     "    if list1 == [] or list2== []:\n",
     "        return \n",
     "    union=list1\n",
@@ -598,7 +606,7 @@
     "\n",
     "def findGroups_union(similar_List):\n",
     "    \"\"\"\n",
-    "    Too time consuming !!! not working!!!\n",
+    "    Too time consuming !!! this function is not working!!!\n",
     "    There are overlapping terminals in differet terminal groups.\n",
     "    Find the lagest group containing all similar terminals.\n",
     "    Note that, the input list should be in descending order (based on the number of calls)\n",
@@ -649,26 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3194\n"
-     ]
-    }
-   ],
-   "source": [
-    "similars_terminals_all11=listToDict(similars_terminals_all)\n",
-    "terminals_all22=len(list(similars_terminals_all11.keys()))\n",
-    "print (terminals_all22)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -711,127 +700,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step d): Update \"portInfor.csv\" file with grouped ports, and further remove duplicates"
+    "### Step d): Update \"portInfor.csv\" file with grouped \"Main_port\", and further remove duplicates."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Terminal</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lon</th>\n",
-       "      <th>number of call start</th>\n",
-       "      <th>number of call end</th>\n",
-       "      <th>number of call all</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Singapore</td>\n",
-       "      <td>Singapore</td>\n",
-       "      <td>1.20470</td>\n",
-       "      <td>103.67232</td>\n",
-       "      <td>7403.0</td>\n",
-       "      <td>7365.0</td>\n",
-       "      <td>14768.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>PTP Terminal</td>\n",
-       "      <td>Russia</td>\n",
-       "      <td>60.32058</td>\n",
-       "      <td>28.72898</td>\n",
-       "      <td>3785.0</td>\n",
-       "      <td>3781.0</td>\n",
-       "      <td>7566.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Novorossiysk</td>\n",
-       "      <td>Russia</td>\n",
-       "      <td>44.72680</td>\n",
-       "      <td>37.78154</td>\n",
-       "      <td>3762.0</td>\n",
-       "      <td>3762.0</td>\n",
-       "      <td>7524.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Yeosu</td>\n",
-       "      <td>South Korea</td>\n",
-       "      <td>34.71473</td>\n",
-       "      <td>127.81125</td>\n",
-       "      <td>3531.0</td>\n",
-       "      <td>3547.0</td>\n",
-       "      <td>7078.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Houston</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>29.23550</td>\n",
-       "      <td>-94.62350</td>\n",
-       "      <td>3371.0</td>\n",
-       "      <td>3375.0</td>\n",
-       "      <td>6746.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Terminal                   Country       Lat        Lon  \\\n",
-       "0     Singapore                 Singapore   1.20470  103.67232   \n",
-       "1  PTP Terminal                    Russia  60.32058   28.72898   \n",
-       "2  Novorossiysk                    Russia  44.72680   37.78154   \n",
-       "3         Yeosu               South Korea  34.71473  127.81125   \n",
-       "4       Houston  United States of America  29.23550  -94.62350   \n",
-       "\n",
-       "   number of call start  number of call end  number of call all  \n",
-       "0                7403.0              7365.0             14768.0  \n",
-       "1                3785.0              3781.0              7566.0  \n",
-       "2                3762.0              3762.0              7524.0  \n",
-       "3                3531.0              3547.0              7078.0  \n",
-       "4                3371.0              3375.0              6746.0  "
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_ports.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -844,16 +718,15 @@
     }
    ],
    "source": [
+    "# a test for the groupCommon() function, for checking.\n",
     "main_singapore=groupCommon(df_ports,portCommon=\"Singapore\",terminals_similar=similars_ids_all[0][0],sortValue=\"number of call all\")\n",
     "print (len(main_singapore))\n",
-    "print(main_ports[\"Singapore\"])\n",
-    "\n",
-    "#df_ports[df_ports.Terminal==main_ports[\"Singapore\"]]"
+    "print(main_ports[\"Singapore\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +738,7 @@
     "    mainDict: dict, with key : main port; value: list of similar terminals\n",
     "    similars_ids_all: list, containing dicts of all(id:[similar terminals])\n",
     "    \n",
-    "    return: a dataframe with new \n",
+    "    return: a dataframe with new column \"Main_port\" \n",
     "    \"\"\"\n",
     "    df_new=pd.DataFrame({})\n",
     "    similars_ids_all=listToDict(similars_ids_all)\n",
@@ -875,7 +748,6 @@
     "        ixx=similars_ids_all[terminal_key]\n",
     "        df_similar_temp=groupCommon(df,portCommon=terminal,terminals_similar=ixx,\n",
     "                                    extra_col=\"Main_port\",sortValue=\"number of call all\")\n",
-    "        \n",
     "        df_new=pd.concat([df_new,df_similar_temp],axis=0)\n",
     "        \n",
     "    return pd_new\n",
@@ -902,29 +774,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_new=add_mainPorts(df_ports,main_ports,similars_ids_all)\n",
-    "df_dups,df_new_nodup=remove_dups(df_new)\n",
-    "\n",
-    "df_noSimilar=df_ports.loc[nosimilars_all]\n",
-    "df_noSimilar[\"Main_port\"]=df_noSimilar.Terminal\n",
-    "\n",
-    "df_all=add_df(df_new_nodup,df_dups,df_noSimilar)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3288\n"
+      "The length of final cleaned dataset: 3288\n"
      ]
     },
     {
@@ -1034,14 +891,25 @@
        "4                3371.0              3375.0              6746.0       Houston  "
       ]
      },
-     "execution_count": 247,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# obtain duplicate df, and df without duplicates\n",
+    "df_new=add_mainPorts(df_ports,main_ports,similars_ids_all)\n",
+    "df_dups,df_new_nodup=remove_dups(df_new)\n",
+    "\n",
+    "# obtain df without similarity\n",
+    "df_noSimilar=df_ports.loc[nosimilars_all]\n",
+    "df_noSimilar[\"Main_port\"]=df_noSimilar.Terminal\n",
+    "\n",
+    "# concatenate all three dfs.\n",
+    "df_all=add_df(df_new_nodup,df_dups,df_noSimilar)\n",
+    "# sort again\n",
     "df_all.sort_values(axis=0,by=[\"number of call end\"],ascending=False,inplace=True)\n",
-    "print (len(df_all))\n",
+    "print (\"The length of final cleaned dataset:\",len(df_all))\n",
     "df_all.head()"
    ]
   },
@@ -1111,12 +979,13 @@
     }
    ],
    "source": [
+    "# some data check\n",
     "df_all[df_all.Main_port==\"Fincantieri Palermo\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -1138,32 +1007,19 @@
     }
    ],
    "source": [
-    "# visulize original ports \n",
-    "bbox=(df_all.Lat.min(),df_all.Lat.max(),df_all.Lon.min(),df_all.Lon.max())                                                        \n",
-    "print (\"The respective minimum and maximum latitude and longitude coordiates of ports are:\",bbox)\n",
-    "\n",
-    "fig,ax=plt.subplots(figsize=(22,14))\n",
-    "m = Basemap(projection='cyl', resolution='l',\n",
-    "            llcrnrlat=bbox[0], urcrnrlat=bbox[1],\n",
-    "            llcrnrlon=bbox[2], urcrnrlon=bbox[3])\n",
-    "ax.scatter(df_all.Lon,df_all.Lat,zorder=1, alpha= 1, c='r', s=20)\n",
-    "draw_map(m)\n",
-    "\n",
-    "ax.set_xlim(bbox[2],bbox[3]);\n",
-    "ax.set_ylim(bbox[0],bbox[1]);\n",
-    "#fig.savefig(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/portsOriginal_1.png\",dpi=400)"
+    "plotPorts(df_all,directory=\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/\",file_name=\"portsOriginal_2.png\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step e): Save dataset"
+    "# Step e): Save data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1144,7 @@
        "19    -45.773050  -67.320400           447  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
