--- a/journeyClean_portsInfo.ipynb
+++ b/journeyClean_portsInfo.ipynb
@@ -2172,7 +2172,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pandas.io.excel import ExcelWriter\n",
+    "import pandas\n",
+    "\n",
+    "# save data from csv to excel format\n",
+    "csv_files = ['portsInfo_1.csv']\n",
+    "with ExcelWriter(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/\"+'portsInfo.xlsx') as ew:\n",
+    "    for csv_file in csv_files:\n",
+    "        pandas.read_csv(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/\"+csv_file).to_excel(ew, sheet_name=csv_file)"
+   ]
   }
  ],
  "metadata": {
