--- a/journeyPorts_group_display.ipynb
+++ b/journeyPorts_group_display.ipynb
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1144,12 +1144,13 @@
        "19    -45.773050  -67.320400           447  "
       ]
      },
-     "execution_count": 270,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "df_gang=pd.ExcelFile(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/PortList.xlsx\")\n",
     "df_gang=df_gang.parse(header=0,index_col=0)\n",
     "df_gang.head()"
@@ -1157,10 +1158,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ix</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Port Group</th>\n",
+       "      <th>Terminal</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lon</th>\n",
+       "      <th>num of call all</th>\n",
+       "      <th>num of call end</th>\n",
+       "      <th>num of call start</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>SE Asia</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>1,2047</td>\n",
+       "      <td>103,67232</td>\n",
+       "      <td>14768</td>\n",
+       "      <td>7365</td>\n",
+       "      <td>7403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Baltic</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>PTP Terminal</td>\n",
+       "      <td>PTP Terminal</td>\n",
+       "      <td>60,32058</td>\n",
+       "      <td>28,72898</td>\n",
+       "      <td>7566</td>\n",
+       "      <td>3781</td>\n",
+       "      <td>3785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Black sea</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>Novorossiysk</td>\n",
+       "      <td>Novorossiysk</td>\n",
+       "      <td>44,7268</td>\n",
+       "      <td>37,78154</td>\n",
+       "      <td>7524</td>\n",
+       "      <td>3762</td>\n",
+       "      <td>3762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NE Asia</td>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>Yeosu</td>\n",
+       "      <td>Yeosu</td>\n",
+       "      <td>34,71473</td>\n",
+       "      <td>127,81125</td>\n",
+       "      <td>7078</td>\n",
+       "      <td>3547</td>\n",
+       "      <td>3531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Gulf</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>Houston</td>\n",
+       "      <td>Houston</td>\n",
+       "      <td>29,2355</td>\n",
+       "      <td>-94,6235</td>\n",
+       "      <td>6746</td>\n",
+       "      <td>3375</td>\n",
+       "      <td>3371</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ix     Region                   Country    Port Group      Terminal  \\\n",
+       "0   0    SE Asia                 Singapore     Singapore     Singapore   \n",
+       "1   1     Baltic                    Russia  PTP Terminal  PTP Terminal   \n",
+       "2   2  Black sea                    Russia  Novorossiysk  Novorossiysk   \n",
+       "3   3    NE Asia               South Korea         Yeosu         Yeosu   \n",
+       "4   4       Gulf  United States of America       Houston       Houston   \n",
+       "\n",
+       "        Lat        Lon  num of call all  num of call end  num of call start  \n",
+       "0    1,2047  103,67232            14768             7365               7403  \n",
+       "1  60,32058   28,72898             7566             3781               3785  \n",
+       "2   44,7268   37,78154             7524             3762               3762  \n",
+       "3  34,71473  127,81125             7078             3547               3531  \n",
+       "4   29,2355   -94,6235             6746             3375               3371  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add extra \"Region\" column to the dataset\n",
+    "# region grouping is manually made in tableau. It may be updated based on requirement.\n",
+    "df_region=pd.read_csv(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/ports_regions.csv\",sep=';')\n",
+    "df_region.columns=[\"ix\",\"Region\",\"Country\",\"Port Group\",\"Terminal\",\"Lat\",\"Lon\",\"num of call all\",\"num of call end\",\"num of call start\"]\n",
+    "df_region.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_region.to_csv(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/savedFile/portsInfo_new.csv\",index=False)"
+   ]
   }
  ],
  "metadata": {
