--- a/journeyPorts_group_display.ipynb
+++ b/journeyPorts_group_display.ipynb
@@ -35,7 +35,7 @@
     "### code 2: Display, and group ports\n",
     "<span style='font-family:\"Times New Roman\"'> <span styel=''> \n",
     "This code is used to group terminals by given radius (e.g., 100 nm), and to add extra features \"Main_port\" and \"Region\".\n",
-    "The working dataset in this sheet is \"PortList.csv\";\n",
+    "The working dataset in this sheet is \"portsInfo.csv\";\n",
     "### Basic steps: \n",
     "    a) Load data;\n",
     "    b) Calculate distance, and group terminal, individually;\n",
