--- a/journeyClean_portsInfo.ipynb
+++ b/journeyClean_portsInfo.ipynb
@@ -34,7 +34,7 @@
     "# Project WP1-2\n",
     "### code 1: Clean journey and remove duplicates\n",
     "<span style='font-family:\"Times New Roman\"'> <span styel=''> \n",
-    "This code is used to extract the \"PortList.csv\" information from \"fleet_trade_journeys.csv\"; \n",
+    "This code is used to extract the \"portsInfo_new.csv\" information from \"fleet_trade_journeys.csv\"; \n",
     "Duplicate terminals are defined as terminals with the same names but in different countries. There are 38 duplicated entries in the dataset \"PortList.xlsx\" from Gang, which needs to be improved;\n",
     "The original dataset is \"fleet_trade_journeys.csv\";\n",
     "### Basic steps: \n",
