--- a/journeyClean_portsInfo.ipynb
+++ b/journeyClean_portsInfo.ipynb
@@ -2169,18 +2169,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pandas.io.excel import ExcelWriter\n",
-    "import pandas\n",
+    "def csvToxlsx(csv_fileNames=['portsInfo_new.csv']):\n",
+    "    # save data from csv to excel format\n",
+    "    from pandas.io.excel import ExcelWriter\n",
+    "    import pandas\n",
     "\n",
-    "# save data from csv to excel format\n",
-    "csv_files = ['portsInfo_1.csv']\n",
-    "with ExcelWriter(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/\"+'portsInfo.xlsx') as ew:\n",
-    "    for csv_file in csv_files:\n",
-    "        pandas.read_csv(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/\"+csv_file).to_excel(ew, sheet_name=csv_file)"
+    "    csv_files = csv_fileNames\n",
+    "    with ExcelWriter(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/savedFile/\"+'portsInfo_new.xlsx') as ew:\n",
+    "        for csv_file in csv_files:\n",
+    "            pandas.read_csv(\"C:/posDoc-SDU-Denmark/SDU_research/shippingLabwp1/savedFile/\"+csv_file).to_excel(ew, sheet_name=csv_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csvToxlsx(csv_fileNames=['portsInfo_new.csv'])"
    ]
   }
  ],
